PrePro/src/main/java/de/sbernauer/prepro/parser/PreProParser.java
// Generated from src/main/java/de/sbernauer/prepro/parser/PrePro.g4 by ANTLR 4.7.1

package de.sbernauer.prepro.parser;

import java.util.Arrays;

import org.nd4j.linalg.factory.Nd4j;

import de.sbernauer.prepro.nodes.*;
import de.sbernauer.prepro.nodes.statement.*;
import de.sbernauer.prepro.nodes.expression.*;
import de.sbernauer.prepro.nodes.expression.arithmetic.*;
import de.sbernauer.prepro.nodes.function.*;
import de.sbernauer.prepro.nodes.debugging.*;
import de.sbernauer.prepro.nodes.expression.logic.*;
import de.sbernauer.prepro.variables.*;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PreProParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, WS=28, BLOCK_COMMENT=29, LINE_COMMENT=30, 
		TYPE=31, IDENTIFIER=32, STRING_LITERAL=33, NUMERIC_LITERAL=34;
	public static final int
		RULE_prepro = 0, RULE_mainFunction = 1, RULE_importDefinitions = 2, RULE_exportDefinitions = 3, 
		RULE_function = 4, RULE_functionArguments = 5, RULE_statement = 6, RULE_assignStatement = 7, 
		RULE_functionCallStatement = 8, RULE_printStatement = 9, RULE_debugStatement = 10, 
		RULE_expression = 11, RULE_term = 12, RULE_factor = 13;
	public static final String[] ruleNames = {
		"prepro", "mainFunction", "importDefinitions", "exportDefinitions", "function", 
		"functionArguments", "statement", "assignStatement", "functionCallStatement", 
		"printStatement", "debugStatement", "expression", "term", "factor"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'import'", "';'", "'export'", "'function'", "'main'", "'('", "')'", 
		"'{'", "'}'", "'optional'", "','", "'returns'", "'return'", "'='", "'print'", 
		"'debug'", "'+'", "'-'", "'*'", "'X'", "'/'", "'=='", "'<='", "'<'", "'>'", 
		"'>='", "'exists'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "WS", "BLOCK_COMMENT", "LINE_COMMENT", "TYPE", 
		"IDENTIFIER", "STRING_LITERAL", "NUMERIC_LITERAL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PrePro.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	private NodeFactory nodeFactory = new NodeFactory();

	public PreProParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PreproContext extends ParserRuleContext {
		public MainNode result;
		public MainFunctionContext mainFunction;
		public FunctionContext function;
		public ImportDefinitionsContext importDefinitions;
		public StatementContext statement;
		public ExportDefinitionsContext exportDefinitions;
		public List<MainFunctionContext> mainFunction() {
			return getRuleContexts(MainFunctionContext.class);
		}
		public MainFunctionContext mainFunction(int i) {
			return getRuleContext(MainFunctionContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public TerminalNode EOF() { return getToken(PreProParser.EOF, 0); }
		public ImportDefinitionsContext importDefinitions() {
			return getRuleContext(ImportDefinitionsContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ExportDefinitionsContext exportDefinitions() {
			return getRuleContext(ExportDefinitionsContext.class,0);
		}
		public PreproContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prepro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).enterPrepro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).exitPrepro(this);
		}
	}

	public final PreproContext prepro() throws RecognitionException {
		PreproContext _localctx = new PreproContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prepro);
		int _la;
		try {
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					setState(35);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						 nodeFactory.startFunctionList(); 
						setState(29);
						((PreproContext)_localctx).mainFunction = mainFunction();
						 nodeFactory.addFunction(((PreproContext)_localctx).mainFunction.result); 
						}
						break;
					case 2:
						{
						setState(32);
						((PreproContext)_localctx).function = function();
						 nodeFactory.addFunction(((PreproContext)_localctx).function.result); 
						}
						break;
					}
					}
					setState(39);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				 ((PreproContext)_localctx).result =  new MainNode(nodeFactory.getFunctionsAsArray()); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				 nodeFactory.startFunctionList(); nodeFactory.startStatementList(); 
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(42);
					match(T__0);
					setState(43);
					((PreproContext)_localctx).importDefinitions = importDefinitions();
					setState(44);
					match(T__1);
					}
				}

				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__14) | (1L << T__15) | (1L << T__26) | (1L << TYPE) | (1L << IDENTIFIER) | (1L << NUMERIC_LITERAL))) != 0)) {
					{
					{
					setState(48);
					((PreproContext)_localctx).statement = statement();
					 nodeFactory.addStatement(((PreproContext)_localctx).statement.result, (((PreproContext)_localctx).statement!=null?(((PreproContext)_localctx).statement.start):null).getLine()); 
					}
					}
					setState(55);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(56);
					match(T__2);
					setState(57);
					((PreproContext)_localctx).exportDefinitions = exportDefinitions();
					setState(58);
					match(T__1);
					}
				}

				 nodeFactory.addFunction(new MainFunctionNode("main", (_localctx.importDefinitions == null ? new ArrayList<>() : ((PreproContext)_localctx).importDefinitions.result), (_localctx.exportDefinitions == null ? new ArrayList<>() : ((PreproContext)_localctx).exportDefinitions.result), new StatementListNode(nodeFactory.getStatementsAsArray()))); 
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(63);
					((PreproContext)_localctx).function = function();
					 nodeFactory.addFunction(((PreproContext)_localctx).function.result); 
					}
					}
					setState(70);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				 ((PreproContext)_localctx).result =  new MainNode(nodeFactory.getFunctionsAsArray()); 
				setState(72);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainFunctionContext extends ParserRuleContext {
		public MainFunctionNode result;
		public ImportDefinitionsContext importDefinitions;
		public StatementContext statement;
		public ExportDefinitionsContext exportDefinitions;
		public ImportDefinitionsContext importDefinitions() {
			return getRuleContext(ImportDefinitionsContext.class,0);
		}
		public ExportDefinitionsContext exportDefinitions() {
			return getRuleContext(ExportDefinitionsContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MainFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).enterMainFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).exitMainFunction(this);
		}
	}

	public final MainFunctionContext mainFunction() throws RecognitionException {
		MainFunctionContext _localctx = new MainFunctionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainFunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(T__3);
			 nodeFactory.startStatementList(); 
			setState(77);
			match(T__4);
			setState(78);
			match(T__5);
			setState(79);
			match(T__6);
			setState(80);
			match(T__7);
			setState(81);
			match(T__0);
			setState(82);
			((MainFunctionContext)_localctx).importDefinitions = importDefinitions();
			setState(83);
			match(T__1);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__14) | (1L << T__15) | (1L << T__26) | (1L << TYPE) | (1L << IDENTIFIER) | (1L << NUMERIC_LITERAL))) != 0)) {
				{
				{
				setState(84);
				((MainFunctionContext)_localctx).statement = statement();
				 nodeFactory.addStatement(((MainFunctionContext)_localctx).statement.result, (((MainFunctionContext)_localctx).statement!=null?(((MainFunctionContext)_localctx).statement.start):null).getLine()); 
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(T__2);
			setState(93);
			((MainFunctionContext)_localctx).exportDefinitions = exportDefinitions();
			setState(94);
			match(T__1);
			setState(95);
			match(T__8);
			 ((MainFunctionContext)_localctx).result =  new MainFunctionNode("main", ((MainFunctionContext)_localctx).importDefinitions.result, ((MainFunctionContext)_localctx).exportDefinitions.result, new StatementListNode(nodeFactory.getStatementsAsArray())); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDefinitionsContext extends ParserRuleContext {
		public List<ImportDefinition> result;
		public Token TYPE;
		public Token IDENTIFIER;
		public List<TerminalNode> TYPE() { return getTokens(PreProParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(PreProParser.TYPE, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(PreProParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(PreProParser.IDENTIFIER, i);
		}
		public ImportDefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDefinitions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).enterImportDefinitions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).exitImportDefinitions(this);
		}
	}

	public final ImportDefinitionsContext importDefinitions() throws RecognitionException {
		ImportDefinitionsContext _localctx = new ImportDefinitionsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDefinitions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((ImportDefinitionsContext)_localctx).result =  new ArrayList<>(); 
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__9 || _la==TYPE) {
				{
				setState(106);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case TYPE:
					{
					setState(99);
					((ImportDefinitionsContext)_localctx).TYPE = match(TYPE);
					setState(100);
					((ImportDefinitionsContext)_localctx).IDENTIFIER = match(IDENTIFIER);
					 _localctx.result.add(nodeFactory.createImportDefinition((((ImportDefinitionsContext)_localctx).TYPE!=null?((ImportDefinitionsContext)_localctx).TYPE.getText():null), (((ImportDefinitionsContext)_localctx).IDENTIFIER!=null?((ImportDefinitionsContext)_localctx).IDENTIFIER.getText():null), false)); 
					}
					break;
				case T__9:
					{
					setState(102);
					match(T__9);
					setState(103);
					((ImportDefinitionsContext)_localctx).TYPE = match(TYPE);
					setState(104);
					((ImportDefinitionsContext)_localctx).IDENTIFIER = match(IDENTIFIER);
					 _localctx.result.add(nodeFactory.createImportDefinition((((ImportDefinitionsContext)_localctx).TYPE!=null?((ImportDefinitionsContext)_localctx).TYPE.getText():null), (((ImportDefinitionsContext)_localctx).IDENTIFIER!=null?((ImportDefinitionsContext)_localctx).IDENTIFIER.getText():null), true)); 
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__10) {
					{
					{
					setState(117);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						setState(108);
						match(T__10);
						setState(109);
						((ImportDefinitionsContext)_localctx).TYPE = match(TYPE);
						setState(110);
						((ImportDefinitionsContext)_localctx).IDENTIFIER = match(IDENTIFIER);
						 _localctx.result.add(nodeFactory.createImportDefinition((((ImportDefinitionsContext)_localctx).TYPE!=null?((ImportDefinitionsContext)_localctx).TYPE.getText():null), (((ImportDefinitionsContext)_localctx).IDENTIFIER!=null?((ImportDefinitionsContext)_localctx).IDENTIFIER.getText():null), false)); 
						}
						break;
					case 2:
						{
						setState(112);
						match(T__10);
						setState(113);
						match(T__9);
						setState(114);
						((ImportDefinitionsContext)_localctx).TYPE = match(TYPE);
						setState(115);
						((ImportDefinitionsContext)_localctx).IDENTIFIER = match(IDENTIFIER);
						 _localctx.result.add(nodeFactory.createImportDefinition((((ImportDefinitionsContext)_localctx).TYPE!=null?((ImportDefinitionsContext)_localctx).TYPE.getText():null), (((ImportDefinitionsContext)_localctx).IDENTIFIER!=null?((ImportDefinitionsContext)_localctx).IDENTIFIER.getText():null), true)); 
						}
						break;
					}
					}
					}
					setState(123);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExportDefinitionsContext extends ParserRuleContext {
		public List<String> result;
		public Token IDENTIFIER;
		public List<TerminalNode> IDENTIFIER() { return getTokens(PreProParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(PreProParser.IDENTIFIER, i);
		}
		public ExportDefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exportDefinitions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).enterExportDefinitions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).exitExportDefinitions(this);
		}
	}

	public final ExportDefinitionsContext exportDefinitions() throws RecognitionException {
		ExportDefinitionsContext _localctx = new ExportDefinitionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_exportDefinitions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((ExportDefinitionsContext)_localctx).result =  new ArrayList<>(); 
			setState(127);
			((ExportDefinitionsContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			 _localctx.result.add((((ExportDefinitionsContext)_localctx).IDENTIFIER!=null?((ExportDefinitionsContext)_localctx).IDENTIFIER.getText():null)); 
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__10) {
				{
				{
				setState(129);
				match(T__10);
				setState(130);
				((ExportDefinitionsContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				 _localctx.result.add((((ExportDefinitionsContext)_localctx).IDENTIFIER!=null?((ExportDefinitionsContext)_localctx).IDENTIFIER.getText():null)); 
				}
				}
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public FunctionNode result;
		public Token IDENTIFIER;
		public FunctionArgumentsContext functionArguments;
		public Token returnType;
		public StatementContext statement;
		public ExpressionContext returnExpression;
		public TerminalNode IDENTIFIER() { return getToken(PreProParser.IDENTIFIER, 0); }
		public FunctionArgumentsContext functionArguments() {
			return getRuleContext(FunctionArgumentsContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode TYPE() { return getToken(PreProParser.TYPE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).exitFunction(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(T__3);
			 nodeFactory.startStatementList(); 
			setState(139);
			((FunctionContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			setState(140);
			match(T__5);
			setState(141);
			((FunctionContext)_localctx).functionArguments = functionArguments();
			setState(142);
			match(T__6);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__11) {
				{
				setState(143);
				match(T__11);
				setState(144);
				((FunctionContext)_localctx).returnType = match(TYPE);
				}
			}

			setState(147);
			match(T__7);
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__14) | (1L << T__15) | (1L << T__26) | (1L << TYPE) | (1L << IDENTIFIER) | (1L << NUMERIC_LITERAL))) != 0)) {
				{
				{
				setState(148);
				((FunctionContext)_localctx).statement = statement();
				 nodeFactory.addStatement(((FunctionContext)_localctx).statement.result, (((FunctionContext)_localctx).statement!=null?(((FunctionContext)_localctx).statement.start):null).getLine()); 
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__12) {
				{
				setState(156);
				match(T__12);
				setState(157);
				((FunctionContext)_localctx).returnExpression = expression();
				setState(158);
				match(T__1);
				}
			}

			setState(162);
			match(T__8);
			 List<ParameterDefinition> functionArguments = (_localctx.functionArguments == null) ? null : ((FunctionContext)_localctx).functionArguments.result;
			                                      ExpressionNode returnExpression = (_localctx.returnExpression == null) ? null : ((FunctionContext)_localctx).returnExpression.result;
			                                      ((FunctionContext)_localctx).result =  new FunctionNode((((FunctionContext)_localctx).IDENTIFIER!=null?((FunctionContext)_localctx).IDENTIFIER.getText():null), (((FunctionContext)_localctx).returnType!=null?((FunctionContext)_localctx).returnType.getText():null),
			                                      functionArguments, new StatementListNode(nodeFactory.getStatementsAsArray()),
			                                      returnExpression); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionArgumentsContext extends ParserRuleContext {
		public List<ParameterDefinition> result;
		public Token TYPE;
		public Token IDENTIFIER;
		public List<TerminalNode> TYPE() { return getTokens(PreProParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(PreProParser.TYPE, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(PreProParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(PreProParser.IDENTIFIER, i);
		}
		public FunctionArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionArguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).enterFunctionArguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).exitFunctionArguments(this);
		}
	}

	public final FunctionArgumentsContext functionArguments() throws RecognitionException {
		FunctionArgumentsContext _localctx = new FunctionArgumentsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionArguments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((FunctionArgumentsContext)_localctx).result =  new ArrayList<>(); 
			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(166);
				((FunctionArgumentsContext)_localctx).TYPE = match(TYPE);
				setState(167);
				((FunctionArgumentsContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				 _localctx.result.add(nodeFactory.createParameterDefinition((((FunctionArgumentsContext)_localctx).TYPE!=null?((FunctionArgumentsContext)_localctx).TYPE.getText():null), (((FunctionArgumentsContext)_localctx).IDENTIFIER!=null?((FunctionArgumentsContext)_localctx).IDENTIFIER.getText():null))); 
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__10) {
					{
					{
					setState(169);
					match(T__10);
					setState(170);
					((FunctionArgumentsContext)_localctx).TYPE = match(TYPE);
					setState(171);
					((FunctionArgumentsContext)_localctx).IDENTIFIER = match(IDENTIFIER);
					 _localctx.result.add(nodeFactory.createParameterDefinition((((FunctionArgumentsContext)_localctx).TYPE!=null?((FunctionArgumentsContext)_localctx).TYPE.getText():null), (((FunctionArgumentsContext)_localctx).IDENTIFIER!=null?((FunctionArgumentsContext)_localctx).IDENTIFIER.getText():null))); 
					}
					}
					setState(177);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
